# autonomous-churn-agent

./: .gitignore  README.md
backend/: pyproject.toml
backend/config/: agents.yaml  tasks.yaml
backend/src/churn_agent/: __init__.py  crew.py  main.py
backend/src/churn_agent/api/: __init__.py  dependencies.py  router.py  sse.py
backend/src/churn_agent/core/: __init__.py  config.py  logging.py
backend/src/churn_agent/schemas/: __init__.py  customer.py  events.py
backend/src/churn_agent/tools/: __init__.py  customer_tools.py  prediction_tools.py  reporting_tools.py
docker/: .env.example  Dockerfile.backend.dev  Dockerfile.frontend.dev  docker-compose.yml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AgentActivity.tsx  ExcelUpload.tsx  RetentionPlaybook.tsx
frontend/src/hooks/: useAnalysisStream.ts
frontend/src/stores/: analysisStore.ts
frontend/src/types/: api.ts
