[project]
name = "churn_agent"
version = "0.1.0"
description = "latest-ai-development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.0"
]

[project.scripts]
churn_agent = "churn_agent.main:run"
run_crew = "churn_agent.main:run"
train = "churn_agent.main:train"
replay = "churn_agent.main:replay"
test = "churn_agent.main:test"
run_with_trigger = "churn_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
